--- a/faq.html
+++ b/faq.html
@@ -160,9 +160,11 @@
             <div class="row">
               <div class="col-xs-12">
                 <div class="bradcaump__inner text-center">
-                  <h2 class="bradcaump-title">CONTACT</h2>
+                  <h2 class="bradcaump-title">FAQ</h2>
                   <nav class="bradcaump-inner">
-                    <a class="breadcrumb-item" href="https://powerful-construction.com">POWERFUL</a>
+                    <a class="breadcrumb-item" href="powerful-construction.com"
+                      >POWERFUL</a
+                    >
                     <span class="brd-separetor">-</span>
                     <span class="breadcrumb-item active"
                       >CONSTRUCTION - LLC</span
@@ -181,129 +183,113 @@
           <div class="row pb--100">
             <div class="col-md-12">
               <div class="htc__contact__inner">
-                <h2 class="title__line--5">CONTACT INFORMATION</h2>
-                <p>
-                  For our construction company, accessing our contact
-                  information is as simple as following the clear path we've
-                  laid out, guiding you seamlessly to our phone numbers, email
-                  addresses, and physical address, ensuring you can reach us
-                  easily for any inquiries, project collaborations, or
-                  consultations.
-                </p>
-              </div>
-              <div class="htc__address__container">
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="zmdi zmdi-pin"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>22 Corabelle Ave, <br />Lodi, NJ 07644 USA</p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="fa fa-phone"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>
-                      <a href="tel: +1 (201)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
-                      </a>
-                    </p>
-                    <p>
-                      <a href="tel: +1 (201)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
-                        (201)903-5007
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="fa fa-globe"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>
-                      <a
-                        href="mailto:powerfulconstruction10@gmail.com"
-                        class="cs-email"
-                      >
-                        <span class="fa fa-envelope"></span>
-                        Send us an email: <br />
-                        powerfulconstruction10@gmail.com
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-              </div>
-            </div>
-          </div>
-
-          <style>
-            .map-container {
-              position: relative;
-              width: 100%;
-              padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-            }
-            .map-container iframe {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-            }
-          </style>
-          <body>
-            <div class="map-container">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3016.8433719108693!2d-74.09399162374525!3d40.87531137136951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f9b477ea7e53%3A0x5028a28223879d0!2sPowerful%20Construction%20LLC!5e0!3m2!1sen!2sus!4v1712078470379!5m2!1sen!2sus"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
-          </body>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="htc__contact__form__wrap">
-                <h2 class="title__line--5">SEND US A MESSAGE</h2>
-                <div class="contact-form-wrap">
-                  <form
-                    action="https://formspree.io/f/xpzvrybl"
-                    method="POST"
-                    enctype="multipart/form-data"
-                  >
-                    <label class="single__cl__form">
-                      <input type="text" placeholder="Name" required />
-                      <input type="email" placeholder="Email" required />
-                    </label>
-                    <label class="single__cl__form">
-                      <input type="tel" placeholder="Phone" required />
-                      <input type="text" placeholder="Subject" required />
-                    </label>
-                    <div class="single__cl__message">
-                      <textarea name="message" placeholder="Massage"></textarea>
-                    </div>
-                    <div class="clint__submit__btn">
-                      <button class="htc__btn" href="#">SEND MESSAGE</button>
-                    </div>
-                  </form>
-                </div>
-                <div class="form-output">
-                  <p class="form-messege"></p>
-                </div>
+                <br />
+                <h2 class="title__line--5">
+                  Frequently Asked Questions (FAQ) - Powerful Construction LLC
+                </h2>
+                <br />
+                <h2>
+                  What types of construction projects does your company
+                  undertake?
+                </h2>
+                <br />
+                We specialize in a wide range of construction projects,
+                including residential, commercial, industrial, and institutional
+                developments. Whether it's building a new home, renovating an
+                office space, or constructing a large-scale industrial facility,
+                we have the expertise and experience to handle it all.
+                <br />
+                <h2>How can I request a quote for my project?</h2>
+                <br />
+                Requesting a quote is easy! Simply visit our website and fill
+                out the contact form with details about your project, including
+                its scope, timeline, and any specific requirements you may have.
+                Alternatively, you can give us a call or send us an email, and
+                one of our representatives will be happy to assist you.
+                <br />
+                <h2>Is your company licensed and insured?</h2>
+                <br />
+                Yes, we are fully licensed and insured to operate in New Jersey.
+                Our team of professionals adheres to all industry regulations
+                and standards to ensure the safety and legality of every project
+                we undertake. What sets your construction company apart from
+                others? At Powerful Construction LLC, we pride ourselves on our
+                commitment to quality, reliability, and customer satisfaction.
+                Our dedicated team of professionals works tirelessly to deliver
+                exceptional results on every project, no matter the size or
+                complexity. We prioritize clear communication, attention to
+                detail, and a collaborative approach to ensure that our clients'
+                vision is brought to life.
+                <br />
+                <h2>How do you ensure safety on the construction site?</h2>
+                <br />
+                Safety is our top priority on every construction site we manage.
+                We strictly adhere to all safety protocols and regulations set
+                forth by local authorities and industry standards. Our team
+                undergoes regular safety training, and we conduct thorough risk
+                assessments to identify and mitigate potential hazards.
+                Additionally, we provide our employees with the necessary
+                personal protective equipment (PPE) and implement comprehensive
+                safety measures to promote a secure working environment for
+                everyone involved.
+                <br />
+                <h2>
+                  What is your approach to sustainability in construction?
+                </h2>
+                <br />
+                Sustainability is integral to our approach to construction. We
+                prioritize eco-friendly building practices, utilize
+                energy-efficient materials and technologies, and implement waste
+                reduction strategies to minimize our environmental impact. From
+                green building certifications to sustainable design solutions,
+                we are committed to promoting sustainability in every aspect of
+                our projects.
+                <br />
+                <h2>
+                  Do you offer financing options for construction projects?
+                </h2>
+                <br />
+                Yes, we understand that financing a construction project can be
+                challenging, which is why we offer flexible financing options to
+                suit our clients' needs. Whether you're looking for traditional
+                financing through a bank or prefer alternative financing
+                arrangements, we can work with you to find the best solution for
+                your project.
+                <br />
+                <h2>How involved will I be in the construction process?</h2>
+                <br />
+                We believe in open communication and transparency throughout the
+                construction process. From initial planning and design to
+                project completion, we keep our clients informed every step of
+                the way. We welcome your input and feedback and strive to
+                collaborate closely with you to ensure that your vision is
+                realized.
+                <br />
+                <h2>What is your warranty policy for construction projects?</h2>
+                <br />
+                We stand behind the quality of our workmanship and materials,
+                which is why we offer a comprehensive warranty on all
+                construction projects. Our warranty policy varies depending on
+                the type of project and scope of work, but rest assured, we are
+                committed to addressing any issues that may arise
+                post-construction promptly.<br />
+                <h2>
+                  How can I get in touch with your team to discuss my
+                  construction needs?
+                </h2>
+                <br />
+                Getting in touch with us is easy! You can reach out to us
+                through our website, give us a call, or send us an email, and
+                one of our friendly representatives will be happy to assist you.
+                We offer free consultations to discuss your construction needs
+                and provide personalized solutions tailored to your project
+                requirements.
               </div>
             </div>
           </div>
         </div>
       </section>
+
       <footer class="htc__footer__area">
         <div class="container htc__contact__address add-res bg__cat--1">
           <div class="row">
