--- a/gutters.html
+++ b/gutters.html
@@ -160,9 +160,11 @@
             <div class="row">
               <div class="col-xs-12">
                 <div class="bradcaump__inner text-center">
-                  <h2 class="bradcaump-title">CONTACT</h2>
+                  <h2 class="bradcaump-title">Gutters</h2>
                   <nav class="bradcaump-inner">
-                    <a class="breadcrumb-item" href="https://powerful-construction.com">POWERFUL</a>
+                    <a class="breadcrumb-item" href="powerful-construction.com"
+                      >POWERFUL</a
+                    >
                     <span class="brd-separetor">-</span>
                     <span class="breadcrumb-item active"
                       >CONSTRUCTION - LLC</span
@@ -176,134 +178,36 @@
       </div>
       <!-- End Bradcaump area -->
       <!-- Start Contact Address -->
-      <section class="htc__contact__area bg__white ptb--150">
-        <div class="container">
-          <div class="row pb--100">
-            <div class="col-md-12">
-              <div class="htc__contact__inner">
-                <h2 class="title__line--5">CONTACT INFORMATION</h2>
-                <p>
-                  For our construction company, accessing our contact
-                  information is as simple as following the clear path we've
-                  laid out, guiding you seamlessly to our phone numbers, email
-                  addresses, and physical address, ensuring you can reach us
-                  easily for any inquiries, project collaborations, or
-                  consultations.
-                </p>
-              </div>
-              <div class="htc__address__container">
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="zmdi zmdi-pin"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>22 Corabelle Ave, <br />Lodi, NJ 07644 USA</p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="fa fa-phone"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>
-                      <a href="tel: +1 (201)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> +1 (201) 903-5007
-                      </a>
-                    </p>
-                    <p>
-                      <a href="tel: +1 (201)903-5007" class="cs-phone"
-                        ><span class="fa fa-phone"></span> &nbsp; &nbsp; &nbsp;
-                        (201)903-5007
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-                <!-- Start Single Address -->
-                <div class="ct__address">
-                  <div class="ct__address__icon">
-                    <i class="fa fa-globe"></i>
-                  </div>
-                  <div class="ct__details">
-                    <p>
-                      <a
-                        href="mailto:powerfulconstruction10@gmail.com"
-                        class="cs-email"
-                      >
-                        <span class="fa fa-envelope"></span>
-                        Send us an email: <br />
-                        powerfulconstruction10@gmail.com
-                      </a>
-                    </p>
-                  </div>
-                </div>
-                <!-- End Single Address -->
-              </div>
-            </div>
-          </div>
-
-          <style>
-            .map-container {
-              position: relative;
-              width: 100%;
-              padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-            }
-            .map-container iframe {
-              position: absolute;
-              top: 0;
-              left: 0;
-              width: 100%;
-              height: 100%;
-            }
-          </style>
-          <body>
-            <div class="map-container">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3016.8433719108693!2d-74.09399162374525!3d40.87531137136951!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2f9b477ea7e53%3A0x5028a28223879d0!2sPowerful%20Construction%20LLC!5e0!3m2!1sen!2sus!4v1712078470379!5m2!1sen!2sus"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </div>
-          </body>
-          <div class="row">
-            <div class="col-md-12">
-              <div class="htc__contact__form__wrap">
-                <h2 class="title__line--5">SEND US A MESSAGE</h2>
-                <div class="contact-form-wrap">
-                  <form
-                    action="https://formspree.io/f/xpzvrybl"
-                    method="POST"
-                    enctype="multipart/form-data"
-                  >
-                    <label class="single__cl__form">
-                      <input type="text" placeholder="Name" required />
-                      <input type="email" placeholder="Email" required />
-                    </label>
-                    <label class="single__cl__form">
-                      <input type="tel" placeholder="Phone" required />
-                      <input type="text" placeholder="Subject" required />
-                    </label>
-                    <div class="single__cl__message">
-                      <textarea name="message" placeholder="Massage"></textarea>
-                    </div>
-                    <div class="clint__submit__btn">
-                      <button class="htc__btn" href="#">SEND MESSAGE</button>
-                    </div>
-                  </form>
-                </div>
-                <div class="form-output">
-                  <p class="form-messege"></p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <section class="htc__contact__area bg__white ptb--150 container">
+        <header>
+            <h1>Enhance Your Property's Protection with Powerful Construction's Gutter Solutions</h1>
+        </header>
+        <main>
+            <section>
+                <h2>Custom Gutter Installation</h2>
+                <p>We specialize in designing and installing custom gutter systems that seamlessly blend with your property's architecture. Whether you need traditional aluminum gutters or prefer a more modern seamless design, we have the expertise to bring your vision to life.</p>
+            </section>
+            <section>
+                <h2>Gutter Repair and Maintenance</h2>
+                <p>Over time, gutters can become clogged, damaged, or worn out. Our team provides comprehensive repair and maintenance services to ensure your gutters remain in optimal condition. From unclogging downspouts to repairing leaks and replacing damaged sections, we've got you covered.</p>
+            </section>
+            <section>
+                <h2>Gutter Protection Systems</h2>
+                <p>Keep your gutters free from debris and prevent clogs with our high-quality gutter protection systems. We offer a range of options, including gutter guards and screens, to help extend the lifespan of your gutters and minimize the need for frequent cleaning.</p>
+            </section>
+            <section>
+                <h2>Seamless Gutter Upgrades</h2>
+                <p>Upgrade to seamless gutters for a sleek, low-maintenance solution that enhances the aesthetic appeal of your property. Our seamless gutter systems are custom fabricated on-site to ensure a perfect fit and maximum durability.</p>
+            </section>
+            <section>
+                <h2>Downspout Installation and Repair</h2>
+                <p>Proper drainage is essential for preventing water damage to your property's foundation. We install and repair downspouts to ensure efficient water flow away from your home or business, minimizing the risk of basement flooding and structural issues.</p>
+            </section>
+        </main>
       </section>
+
+      <!-- End Contact Address -->
+      <!-- Start Footer Area -->
       <footer class="htc__footer__area">
         <div class="container htc__contact__address add-res bg__cat--1">
           <div class="row">
@@ -362,6 +266,7 @@
             </div>
           </div>
         </div>
+
         <div class="copyright bg__theme">
           <div class="container">
             <div class="row">
